src/objects/loan__MF_Account__c.object
<CustomObject>
    <fields>
        <fullName>loan__Acccount_Type_Multiplier__c</fullName>
        <formula>IF(OR(CONTAINS(loan__Account_Type__r.Name, &quot;ASSET&quot;) ,CONTAINS(loan__Account_Type__r.Name, &quot;EXPENSE&quot;)),1,-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acccount Type Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Account_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Type</description>
        <inlineHelpText>Account Type</inlineHelpText>
        <label>Account Type</label>
        <referenceTo>loan__MF_Account_Type__c</referenceTo>
        <relationshipName>MF_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipName>MF_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Category_1__c</fullName>
        <label>Category 1</label>
        <picklist>
            <picklistValues>
                <fullName>Treasury and Operations with Banks and Other Financial Institutions FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations with Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Category_2__c</fullName>
        <label>Category 2</label>
        <picklist>
            <picklistValues>
                <fullName>Accrual Payable Interests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accrual Receivable Interests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets in The Union Credit Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrowings Overnight and Term Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash and Equivalent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash held in Banks and Other Financial Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash in Vaults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Loans to Banks and Other Financial Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Assets &amp; Depreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Reserves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net ProfitLoss of Period +- From January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Performing Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Performing Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Long Term Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Reserves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others Assets Stock,…</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdraft &amp; Treasury Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid up Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payable Accounts and other short term liabilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Category_3__c</fullName>
        <label>Category 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__FY_Closing_Balance__c</fullName>
        <label>FY Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is a period for calculating annual financial statements in businesses and other organizations.</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>loan__Fiscal_Year__c</referenceTo>
        <relationshipName>MF_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Is_Master__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__JV_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JV Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Opening_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Account</description>
        <inlineHelpText>It is the parent ledger account for this account.</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>MF_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Title__c</fullName>
        <formula>Name &amp;  &quot; &quot; &amp; loan__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Balance__c</fullName>
        <formula>loan__Opening_Balance__c +  loan__Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__isLeaf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Leaf</label>
        <type>Checkbox</type>
    </fields>
    <label>GL Account</label>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Check_Unique_Account</fullName>
        <active>false</active>
        <errorConditionFormula>IF((Name = VLOOKUP( $ObjectType.loan__MF_Account__c.Fields.Name , $ObjectType.loan__MF_Account__c.Fields.Name , Name ) 
&amp;&amp; 
loan__Branch__c  =  VLOOKUP($ObjectType.loan__MF_Account__c.Fields.loan__Branch__c ,  $ObjectType.loan__MF_Account__c.Fields.Name,loan__Branch__c )
&amp;&amp;
 loan__Fiscal_Year__c  =  VLOOKUP( $ObjectType.loan__MF_Account__c.Fields.loan__Fiscal_Year__c , $ObjectType.loan__MF_Account__c.Fields.Name,  loan__Fiscal_Year__c ) 
),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Account Number already exists.</errorMessage>
    </validationRules>
</CustomObject>